--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "scripts": {
     "start": "react-scripts start",
     "watch_build": "npm-watch build",
-    "build": "INLINE_RUNTIME_CHUNK=false react-scripts build && node ./utils/manifest_generator.js",
+    "build": "react-scripts build && node ./utils/manifest_generator.js",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
